--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -71,11 +71,11 @@
       .el-submenu {
         &>.el-submenu__title {
           &>span {
-            height: 0;
-            width: 0;
-            overflow: hidden;
-            visibility: hidden;
-            display: inline-block;
+            //height: 0;
+            //width: 0;
+            //overflow: hidden;
+            //visibility: hidden;
+            //display: inline-block;
           }
         }
       }
